fixes for pip install

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,7 @@ recursive-include *.py
 include CHANGELOG.md
 include README.md
 include dvha/LICENSE
-include logo.png
-include icons/*.png
+include dvha/logo.png
+include dvha/icons/*.png
+include dvha/db/*.sql
+iclude dvha/db/*.roi
