update LICENSE.txt references in paths and MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 recursive-include *.py
 include CHANGELOG.md
 include README.md
-include dvha/LICENSE
+include dvha/LICENSE.txt
 include dvha/logo.png
 include dvha/icons/*.png
 include dvha/db/*.sql
