--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 dicompyler-core>=0.5.4
 wxPython>=4.0.4
 pypubsub
-numpy==1.17.4
+numpy
 scipy
 pydicom>1.0
 bokeh>=1.2.0
 psycopg2-binary
-shapely[vectorized]==1.6.4post2
+shapely[vectorized]<1.7.0
 python-dateutil
 statsmodels
-scikit-learn==0.22
+scikit-learn==0.21
 regressors
