ignore metachache.mim on parsing (throws MemoryError), tweak patient name and uid ref missed in prev commit, misc tweaks

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
-recursive-include *.py
+include dvha_app.py
+recursive-include dvha/*.py
 include CHANGELOG.md
 include README.md
 include dvha/LICENSE.txt
