--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,4 +8,4 @@ include dvha/icons/*.png
 include dvha/icons/dvha.icns
 include dvha/icons/dvha.ico
 include dvha/db/*.sql
-include dvha/tools/TG263_Nomenclature_Worksheet_20170815.csv
+include dvha/tools/*.csv
