propagate options to plots after change, settings and export are now floating frames https://github.com/cutright/DVH-Analytics/issues/56

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ wxPython>=4.0.4
 pypubsub
 numpy
 scipy
-pydicom>1.0
+pydicom>=1.4.0
 bokeh>=1.2.0,<2.0.0
 psycopg2-binary
 shapely[vectorized]<1.7.0
