--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,10 +2,8 @@ include dvha_app.py
 recursive-include dvha/*.py
 include CHANGELOG.md
 include README.md
-include dvha/LICENSE.txt
-include dvha/logo.png
-include dvha/icons/*.png
-include dvha/icons/dvha.icns
-include dvha/icons/dvha.ico
+include LICENSE.txt
+include dvha/resources/logo.png
+include dvha/resources/icons/*
 include dvha/db/*.sql
-include dvha/tools/*.csv
+include dvha/tools/TG263_Nomenclature_Worksheet_20170815.csv
