--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ scipy
 pydicom>=1.4.0
 bokeh>=1.2.0,<2.0.0
 psycopg2-binary
-shapely[vectorized]<1.7.0
+shapely[vectorized]
 python-dateutil
 statsmodels >= 0.8.0
 scikit-learn>=0.21.0
