--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,13 +1,18 @@
-dicompyler-core
+dicompyler-core>=0.5.5
+wxPython>=4.1.1
 pypubsub
-pydicom
-bokeh<2.0.0
+numpy
+scipy
+pydicom>=1.4.0
+bokeh>=1.2.0,<2.0.0
 psycopg2-binary
 shapely[vectorized]
 python-dateutil
-statsmodels
-scikit-learn
+statsmodels>=0.8.0
+scikit-learn>=0.21.0
 regressors
 rapidfuzz
 selenium
+pandas>=1.1.5
 scikit-image
+dvha-mlca>=0.2.3.post1
